# pyopmnearwell

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  build_dune_and_opm-flow.bash  build_dune_and_opm-flow_mpi.bash  build_opm-flow_macOS.bash  build_opm-flow_mpi.bash  dev-requirements.txt  pyproject.toml  requirements.txt  scaler_exporting.py  setup.py
.github/workflows/: CI.yml
docs/: .buildinfo  Makefile  about.html  api.html  configuration_file.html  contributing.html  examples.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  output_folder.html  py-modindex.html  pyopmnearwell.core.html  pyopmnearwell.core.pyopmnearwell.html  pyopmnearwell.html  pyopmnearwell.ml.analysis.html  pyopmnearwell.ml.data.html  pyopmnearwell.ml.ensemble.html  pyopmnearwell.ml.html  pyopmnearwell.ml.integration.html  pyopmnearwell.ml.kerasify.html  pyopmnearwell.ml.nn.html  pyopmnearwell.ml.resdata_dataset.html  pyopmnearwell.ml.scaler_layers.html  pyopmnearwell.ml.upscale.html  pyopmnearwell.ml.utils.html  pyopmnearwell.utils.formulas.html  pyopmnearwell.utils.html  pyopmnearwell.utils.inputvalues.html  pyopmnearwell.utils.mako.html  pyopmnearwell.utils.plotting.html  pyopmnearwell.utils.runs.html  pyopmnearwell.utils.units.html  pyopmnearwell.utils.writefile.html  pyopmnearwell.visualization.additional_plots.html  pyopmnearwell.visualization.getpressure.html  pyopmnearwell.visualization.html  (+5 more)
docs/_sources/: about.rst.txt  api.rst.txt  configuration_file.rst.txt  contributing.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  output_folder.rst.txt  pyopmnearwell.core.pyopmnearwell.rst.txt  pyopmnearwell.core.rst.txt  pyopmnearwell.ml.analysis.rst.txt  pyopmnearwell.ml.data.rst.txt  pyopmnearwell.ml.integration.rst.txt  pyopmnearwell.ml.rst.txt  pyopmnearwell.ml.upscale.rst.txt  pyopmnearwell.ml.utils.rst.txt  pyopmnearwell.utils.inputvalues.rst.txt  pyopmnearwell.utils.mako.rst.txt  pyopmnearwell.utils.plotting.rst.txt  pyopmnearwell.utils.rst.txt  pyopmnearwell.utils.runs.rst.txt  pyopmnearwell.utils.writefile.rst.txt  pyopmnearwell.visualization.additional_plots.rst.txt  pyopmnearwell.visualization.getpressure.rst.txt  pyopmnearwell.visualization.rst.txt  related.rst.txt
docs/text/: about.rst  api.rst  conf.py  configuration_file.rst  contributing.rst  examples.rst  installation.rst  introduction.rst  modules.rst  output_folder.rst  pyopmnearwell.core.pyopmnearwell.rst  pyopmnearwell.core.rst  pyopmnearwell.ml.analysis.rst  pyopmnearwell.ml.ensemble.rst  pyopmnearwell.ml.integration.rst  pyopmnearwell.ml.kerasify.rst  pyopmnearwell.ml.nn.rst  pyopmnearwell.ml.resdata_dataset.rst  pyopmnearwell.ml.rst  pyopmnearwell.ml.scaler_layers.rst  pyopmnearwell.ml.utils.rst  pyopmnearwell.rst  pyopmnearwell.utils.formulas.rst  pyopmnearwell.utils.inputvalues.rst  pyopmnearwell.utils.rst  pyopmnearwell.utils.runs.rst  pyopmnearwell.utils.units.rst  pyopmnearwell.visualization.plotting.rst  pyopmnearwell.visualization.reading.rst  related.rst
examples/: co2.toml  co2.txt  co2_hyst_cplog.toml  co2_tuning.toml  co2eor.toml  co2eor.txt  co2eor_bhpcontrol.toml  co2eor_bhpcontrol.txt  co2eor_lowerlayerinjection.toml  co2eor_lowerlayerinjection.txt  foam.toml  h2.toml  h2.txt  h2biofilm.toml  h2core.toml  h2core.txt  h2interpore2025.toml  h2o.toml  h2o.txt  saltprec.toml  saltprec.txt  saltprecipitation.txt  saltprecpv.toml  saltprecpv.txt
examples/2023-08-07_ml_well_model_CO2/: RESERVOIR.mako  run_ensemble.py  train_nn.py
examples/2023-08-10_ml_well_model_CO2_realistic_critical_point/: CAKE.INC  StandardWell_impl.mako  co2_3d_finescale_wellmodel.mako  co2_3d_finescale_wellmodel_large_reservoir.mako  co2_3d_flow_wellmodel.mako  co2_3d_flow_wellmodel_large_reservoir.mako  co2_3d_ml_wellmodel.mako  co2_3d_ml_wellmodel_large_reservoir.mako  integration.py  run_ensemble.py  train_nn.py
examples/2023-08-14_ml_well_model_CO2_realistic_critical_point/: StandardWell_impl.mako  co2_3d_finescale_wellmodel.mako  co2_3d_flow_wellmodel.mako  co2_3d_ml_wellmodel.mako  integration.py  run_ensemble.py  train_nn.py
examples/2023-08-17_ml_well_model_CO2/: RESERVOIR.mako  StandardWell.hpp  StandardWell_impl.mako  integration.py  run_ensemble.py  runspecs.py  train_nn.py
examples/data/: nn_example.py
examples/data_generation/: eor.mako  example.py
examples/ecl_dataset/: snapshot.metadata
examples/hysteresis_models/: co2.mako  run_simulations.py
examples/ml/: RESERVOIR.mako  recovery.py
examples/ml_cyclic_h2/: example.py  h2.mako  ml_routine.py
examples/ml_example_co2/: co2.mako  example.py
examples/ml_example_co2eor/: co2eor.mako  example.py  ml_routine.py
examples/ml_example_h2/: CAKE.INC  RESERVOIR.mako  TABLES.INC  example.py  h2.mako  h2.txt  ml_routine.py
examples/ml_new/: h2o.py  h2o_ensemble.mako  h2o_integration.mako
examples/ml_peaceman_co2/: co2_3d_flow_wellmodel.mako  co2_3d_ml_wellmodel.mako  co2_nearwell.mako  example.py  ml_routine.py
examples/ml_peaceman_water/: StandardWell_impl.mako  comparar.py  example.py  h2o.txt  h2o_3d_flow_wellmodel.mako  h2o_3d_ml_wellmodel.mako  h2o_nearwell.mako  ml_routine.py  opmkeras.py
examples/ml_timeseries_h2/: example.py  h2.mako
src/pyopmnearwell/: __init__.py
test_local_stencil_compile/: integration.py  scalings.csv
tests/: bla.py  conftest.py  test_analysis.py  test_co2core.py  test_co2eor.py  test_co2store.py  test_csaltprec.py  test_data.py  test_ecl_dataset.py  test_ensemble.mako  test_ensemble.py  test_formulas.py  test_geometries.py  test_h2store.py  test_kerasify.py  test_main.py  test_models.py  test_nn.py  test_plot_all.py  test_plot_comparison.py  test_plotting.py  test_pressure_reader.py  test_resdata_dataset.py  test_runs.py  test_scaler_layers.py  test_units.py  test_upscale.py  test_writefile.py
tests/configs/: co2store.txt  h2store.txt  input.txt
tests/geometries/: cake.toml  cake.txt  cartesian.toml  cartesian.txt  cartesian2d.toml  cartesian2d.txt  coord2d.toml  coord2d.txt  coord3d.toml  coord3d.txt  (+9 more)
(+382 files in other folders)
